# csft5

./: .gitignore  .topdeps  .topmsg  PythonSource.spec  README.coreseek.txt  clear_pyx.sh  configure.ac  csft.files
SPEC.coreseek/: PythonConfig.spec
pytest/: README  csft.py.source.conf  csft.py.xml.conf
pytest/demo_source/: __init__.py  demo.py  demo_pyconf.py  demo_pysource.py
pytest/idx/: __README__
src/: Makefile.am  indexer.cpp  py_layer.cpp  py_layer.h  pycsft.pyx  pyiface.cpp  pyiface.h  pysource.cpp  pysource.h  search.cpp  searchd.cpp  sphinx.cpp  sphinx.h  sphinxutils.cpp  sphinxutils.h
